# python_magento_ua

./: .env.example  pyproject.toml  script.py
magento_ua/: __init__.py  client.py  settings.py
magento_ua/auth/: __init__.py  security.py  token_provider.py
magento_ua/core/: __init__.py  base_client.py  dependency_injection.py  http_adapter.py
magento_ua/endpoints/: __init__.py  base.py  orders.py  products.py
magento_ua/exceptions/: __init__.py  api.py  base.py  network.py
magento_ua/models/: __init__.py  category.py  customer.py  order.py  product.py
magento_ua/network/: __init__.py  rate_limiter.py  retry.py
magento_ua/utils/: __init__.py  helpers.py  serialization.py  validation.py
tests/: config.py  conftest.py  helpers.py  test.env  test_client.py  test_conection.py  test_settings.py
